<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="total_kms">Total de quilômetros</string>
    <string name="liter_price">Preço Litro</string>
    <string name="liter_kms">KMs por litro</string>
    
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    
    <string name="total_expense">Seu gasto total será de:</string>
    <string name="default_value">R$ 0,00</string>
    <string name="calculate">Calcular</string>

    <string name="validade_fill_all_fields">Preencha todos os campos.</string>
    <string name="validade_impossible_to_divide">Impossível dividir por 0.</string>
</resources>